# xl2times-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-07-29-core-mcp-server/: spec.md  tasks.md
.agent-os/specs/2025-07-29-core-mcp-server/sub-specs/: api-spec.md  technical-spec.md  tests.md
examples/: README.md  test_xl2times_real.py
examples/test_client/: client.py
output/: ACT_BND_output.csv  ALL_TS_output.csv  B_output.csv  COM_TMAP_output.csv  COM_output.csv  NCAP_COST_output.csv  TOP_IRE_output.csv  TOP_output.csv  merged_tables.txt  raw_tables.txt
output/DemoS_001/: ALL_REG_output.csv  COM_GRP_output.csv  G_DRATE_output.csv  MILESTONYR_output.csv  NCAP_FOM_output.csv  PRC_DESC_output.csv  PRC_TSL_output.csv  PRC_output.csv  REG_output.csv  TOP_IRE_output.csv  TOP_output.csv  merged_tables.txt  raw_tables.txt
output/test_client/: COM_DESC_output.csv  COM_UNIT_output.csv  E_output.csv  G_DYEAR_output.csv  IRE_PRICE_output.csv  NCAP_AFA_output.csv  NCAP_TLIFE_output.csv  PRC_ACTUNT_output.csv  PRC_MAP_output.csv  TS_GROUP_output.csv  UNITS_ACT_output.csv  UNITS_CAP_output.csv  UNITS_MONY_output.csv  UNITS_output.csv  merged_tables.txt  raw_tables.txt
output/test_client_llm/: ACT_CUM_output.csv  ACT_EFF_output.csv  COM_PROJ_output.csv  G_YRFR_output.csv  MODLYEAR_output.csv  merged_tables.txt  raw_tables.txt
src/: __init__.py  config.py  server.py
src/handlers/: __init__.py  info_handler.py  xl2times_handler.py
src/utils/: __init__.py
src/wrappers/: __init__.py  xl2times_wrapper.py
tests/: __init__.py  test_server_setup.py  test_xl2times_wrapper.py
veda-model-examples/DemoS_001/AppData/: Cases.json  FrontEndFormFormSettings.json  Groups.json  ResultViewsDetails.json  ResultsFormSettings.json  Settings.json  VedaTags.xlsx
veda-model-examples/DemoS_001/SyncLogs/: SynchronizeLogAllEntries - tasks.xlsx  SynchronizeLogNewEntries - tasks.xlsx
