[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xl2times-mcp-server"
version = "1.0.0"
description = "Model Context Protocol (MCP) server for xl2times VEDA-TIMES energy system model processing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "xl2times-mcp-server contributors"},
]
keywords = ["mcp", "xl2times", "veda-times", "energy", "modeling", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=0.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/dlg0/xl2times-mcp-server"
Repository = "https://github.com/dlg0/xl2times-mcp-server"
Issues = "https://github.com/dlg0/xl2times-mcp-server/issues"
Documentation = "https://github.com/dlg0/xl2times-mcp-server#readme"

[project.scripts]
xl2times-mcp-server = "src.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]
